--- a/style.css
+++ b/style.css
@@ -71,6 +71,18 @@ ul {
     }
 }
 
+
+/************* Navigation ************/
+
 .navigation {
   text-align: center;
+}
+
+
+/**************** Subheadings *********/
+
+.app-subheading {
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #ccc;
 }
